# ShutterSort

./: .mypy.ini  .ruff.toml  CONTRIBUTING.md  LEARNING.md  README.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  publish-pypi.yml  publish-testpypi.yml
media_pruner/: __init__.py  agent_base.py  agent_curator.py  agent_decision.py  agent_librarian.py  cli.py  models.py  utils.py
tests/: __init__.py  conftest.py  test_curator.py  test_decision.py  test_functional.py  test_librarian.py
